<resources>
    <string name="app_name">FingerprintLock</string>
    <string name="enter_pattern">Draw your pattern here</string>
    <string name="retry">Retry</string>
    <string name="confirm">Confirm</string>
    <string name="what_is_your_favourite_book">What is your favourite book</string>
    <string name="who_is_your_favourite_actor">Who is your favourite actor</string>
    <string name="what_is_your_blood_group">What is your blood group</string>
    <string name="what_is_your_vehicle_no">What is your vehicle no</string>
    <string name="how_many_brothers_or_sisters_you_have">how many brothers or sisters you have</string>
    <string name="unlock_mode">Unlock Mode</string>
    <string name="pattern">Pattern</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="red"></string>
    <string name="finl"></string>
    <string name="blue"></string>
    <string name="title_activity_bottomnav">bottomnav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
