<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colordiff_background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PasswordSetActivity">

    <TextView
        android:id="@+id/passwordset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/enter_pattern"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/md_white_1000"
        android:layout_marginBottom="10dp"/>

    <com.takwolf.android.lock9.Lock9View
        android:id="@+id/lock_9_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        app:lock9_nodeSrc="@drawable/bg_lock"
        app:lock9_nodeOnSrc="@drawable/confounded"
        app:lock9_nodeSize="10dp"
        app:lock9_nodeAreaExpand="24dp"
        app:lock9_lineColor="@color/md_blue_50"
        app:lock9_lineWidth="4dp"
        app:lock9_autoLink="true"
        app:lock9_enableVibrate="true"
        app:lock9_vibrateTime="20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/retrybtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/retry"/>
        <Button
            android:id="@+id/confirmbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>